<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"/>

    <TextView style="@style/TextAppearance.QuizApp.Subtitle2"
        android:id="@+id/quiz_salutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="left"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"/>

    <TextView style="@style/TextAppearance.QuizApp.Subtitle2"
        android:id="@+id/quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_category"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView style="@style/TextAppearance.QuizApp.Caption"
        android:id="@+id/question_text"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/question_display"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="5dp"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#024CAF50"
        android:layout_marginLeft="25dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_option1"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_option2"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_option3"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_option4"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_quest"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/QAsubmit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_ans"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/next_quest" />

    </LinearLayout>


</LinearLayout>