<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"/>

    <TextView style="@style/TextAppearance.QuizApp.Subtitle2"
        android:id="@+id/quiz_salutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="left"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"/>

    <TextView
        android:id="@+id/results_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_result"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/results_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_Score"
        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/high_Score"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TableLayout
        android:id="@+id/results_list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/white"
        android:padding="32dp">

        <TableRow
            android:background="@color/green"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rank"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_quiz"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_quiz"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp" />

    </LinearLayout>

</LinearLayout>
